--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -270,8 +270,8 @@ BODY {
 :focus {
     outline: 2px solid var(--FC);
 }
+
 IMG {
-    display: block;
     width: 100%;
     height: 100%;
     border-style: none;
@@ -285,7 +285,8 @@ A {
 UL {
     list-style: none;
 }
-
+IMG,
+PICTURE,
 INPUT[type="text"],
 INPUT[type="email"],
 TEXTAREA,
@@ -1006,10 +1007,11 @@ I {
     translate: 0;
 }
 .icon_container {
+    --iconPd: var(--LG);
     overflow: hidden;
     width: var(--iconD);
     height: var(--iconD);
-    padding: var(--LG);
+    padding: var(--iconPd);
 
     @include flexCenter();
     user-select: none;
@@ -1181,7 +1183,7 @@ I {
         display: none;
     }
     .icon_container {
-        padding: var(--MD);
+        --iconPd: var(--MD);
     }
     @include flexCenter();
     .icon_svg {
@@ -1354,6 +1356,9 @@ I {
 .flex_responsive {
     @include flex(column, flex-start, center);
     gap: var(--XL);
+    DIV {
+        width: 100%;
+    }
 }
 .subtitle_section {
     margin: var(--XL) 0 var(--LG);
@@ -1656,10 +1661,9 @@ I {
             line-height: 1;
         }
         .icon_container {
+            --iconD: var(--XL);
+            --iconPd: 0;
             @include flexCenter();
-            height: var(--XL);
-            width: var(--XL);
-            padding: 0;
         }
     }
 
@@ -2011,6 +2015,45 @@ I {
             margin-top: var(--XL);
         }
     }
+    .about_img {
+        height: 100%;
+        @include flexCenter();
+        PICTURE {
+            width: 90%;
+            max-width: 30rem;
+            border-radius: 0 0 30% 30%;
+            overflow: hidden;
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                width: 100%;
+                height: calc(100% - 2rem);
+                background: var(--btnGradient);
+                z-index: -1;
+                border-radius: 30%;
+            }
+            IMG {
+                transform: translateY(4rem);
+            }
+            & *,
+            &::after {
+                transition: var(--T_M);
+            }
+            &:hover {
+                &::after {
+                    height: 60%;
+                }
+                IMG {
+                    transform: translateY(0);
+                }
+            }
+        }
+    }
 }
 .badge {
     @include flex(column, flex-start, center);
@@ -2045,11 +2088,7 @@ I {
     gap: var(--LG);
 }
 .skills_section {
-    --skillIconD: 6rem;
-    .icon_container {
-        height: var(--skillIconD);
-        width: var(--skillIconD);
-    }
+    --iconD: 6rem;
 }
 .services_container {
     position: relative;
@@ -2088,62 +2127,39 @@ I {
 }
 .legals_section {
     background: var(--NVC);
-    .footer_content,
+    .footer_content {
+        width: 100%;
+    }
     .lebels_container {
-        @include flex(row, space-between, flex-end);
-    }
-    .social_btns_container {
-        width: fit-content;
-        justify-content: flex-end;
-    }
-    .icon_container {
-        width: 3rem;
-        height: 3rem;
-        padding: var(--SM);
-    }
-    .link_text {
-        font-size: var(--FS_XS);
-        color: var(--TC);
-    }
-    .link_text {
-        line-height: 1.5;
-    }
-    .copy_rights {
-        font-weight: 400;
-        color: var(--FC);
+        height: 100%;
     }
     .made_content {
-        margin-left: 3rem;
-        .btns_container :not(:first-child) {
-            margin-left: var(--XL);
-        }
-        .label_btn {
-            font-size: var(--FS_S);
-        }
+        @include flex(column, space-between, flex-end);
+    }
+    .icon_container {
+        --iconD: 3rem;
+        --iconPd: var(--SM);
+    }
+
+    .social_btns_container,
+    .btns_container {
+        width: fit-content;
     }
     .btns_container {
-        justify-content: flex-start;
+        justify-content: flex-end;
+        gap: 1rem;
     }
 }
-.clients_list {
-    @include flexCenter();
-    flex-wrap: wrap;
-    gap: var(--XL);
-    .icon_container {
-        --logoSize: 10rem;
-        height: var(--logoSize);
-        width: auto;
-        max-width: calc(var(--logoSize) * 2);
-        SVG {
-            height: 100%;
-            width: auto;
-        }
-        IMG {
-            height: 100%;
-            width: 100%;
-            object-fit: contain;
-        }
-    }
+.link_text {
+    font-size: var(--FS_XS);
+    color: var(--TC);
+}
+.link_text {
+    line-height: 1.5;
+}
+.copy_rights {
+    font-weight: 400;
+    color: var(--FC);
 }
 .nav_menu {
     position: sticky;
@@ -2165,7 +2181,7 @@ I {
     }
 
     .icon_container:not(.logo_btn) {
-        width: 3.5rem;
+        --cionSize: 3.5rem;
         fill: var(--TC);
     }
     .btn_active {
@@ -2406,7 +2422,13 @@ I {
 }
 @media screen and (min-width: 800px) {
     .flex_responsive {
-        @include flexCenter();
+        @include flex(row, center, flex-start);
+    }
+    .legals_section {
+        .flex_responsive {
+            flex-direction: row-reverse;
+            align-items: flex-end;
+        }
     }
     .flex_img {
         flex-basis: 30%;
