--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -272,6 +272,7 @@ BODY {
 }
 
 IMG {
+    display: block;
     width: 100%;
     height: 100%;
     border-style: none;
@@ -285,7 +286,7 @@ A {
 UL {
     list-style: none;
 }
-IMG,
+
 PICTURE,
 INPUT[type="text"],
 INPUT[type="email"],
@@ -1356,8 +1357,11 @@ I {
 .flex_responsive {
     @include flex(column, flex-start, center);
     gap: var(--XL);
-    DIV {
+    .responsive_content {
         width: 100%;
+    }
+    .social_btns_container {
+        --iconD: 6rem;
     }
 }
 .subtitle_section {
@@ -2017,7 +2021,7 @@ I {
     }
     .about_img {
         height: 100%;
-        @include flexCenter();
+        @include flex(column, space-between, center);
         PICTURE {
             width: 90%;
             max-width: 30rem;
@@ -2089,6 +2093,9 @@ I {
 }
 .skills_section {
     --iconD: 6rem;
+    .btn {
+        --iconD: 3rem;
+    }
 }
 .services_container {
     position: relative;
@@ -2129,6 +2136,7 @@ I {
     background: var(--NVC);
     .footer_content {
         width: 100%;
+        padding: 2rem 0;
     }
     .lebels_container {
         height: 100%;
