--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1360,9 +1360,6 @@ I {
     .responsive_content {
         width: 100%;
     }
-    .social_btns_container {
-        --iconD: 6rem;
-    }
 }
 .subtitle_section {
     margin: var(--XL) 0 var(--LG);
@@ -2057,6 +2054,9 @@ I {
                 }
             }
         }
+        .icon_container {
+            --iconPd: var(--MD);
+        }
     }
 }
 .badge {
@@ -2134,6 +2134,8 @@ I {
 }
 .legals_section {
     background: var(--NVC);
+    min-height: 80vh;
+    @include flex(column, flex-end, center);
     .footer_content {
         width: 100%;
         padding: 2rem 0;
