--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1980,7 +1980,12 @@ I {
     .section_content {
         position: relative;
     }
-
+    .social_btns_container {
+        width: fit-content;
+        .icon_container {
+            --iconPd: var(--MD);
+        }
+    }
     .about_salute {
         width: 100%;
         height: 100%;
@@ -2015,43 +2020,40 @@ I {
     .about_img {
         height: 100%;
         @include flex(column, space-between, center);
-        PICTURE {
-            width: 90%;
-            max-width: 30rem;
-            border-radius: 0 0 30% 30%;
-            overflow: hidden;
-            position: relative;
+    }
+    PICTURE {
+        width: 90%;
+        max-width: 30rem;
+        border-radius: 0 0 30% 30%;
+        overflow: hidden;
+        position: relative;
 
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 80%;
+            background: var(--btnGradient);
+            z-index: -1;
+            border-radius: 30%;
+        }
+        IMG {
+            transform: translateY(3rem);
+        }
+        & *,
+        &::after {
+            transition: var(--T_M);
+        }
+        &:hover {
             &::after {
-                content: "";
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                width: 100%;
-                height: calc(100% - 2rem);
-                background: var(--btnGradient);
-                z-index: -1;
-                border-radius: 30%;
+                height: 60%;
             }
             IMG {
-                transform: translateY(3rem);
+                transform: translateY(0);
             }
-            & *,
-            &::after {
-                transition: var(--T_M);
-            }
-            &:hover {
-                &::after {
-                    height: 60%;
-                }
-                IMG {
-                    transform: translateY(0);
-                }
-            }
-        }
-        .icon_container {
-            --iconPd: var(--MD);
         }
     }
 }
