--- a/src/css/style.css
+++ b/src/css/style.css
@@ -74,7 +74,7 @@
   --iconD: 4rem;
   --fontSizeSClamp: clamp(1.2rem, calc(1.2rem + 0.5vw), 1.8rem);
   --fontSizeMClamp: clamp(2rem, calc(1.5rem + 0.5vw), 2.2rem);
-  --fontSizeXClamp: clamp(2.5rem, calc(1.5rem + 1.5vw), 4rem);
+  --fontSizeXClamp: clamp(2.5rem, calc(1.5rem + 1.5vw), 3rem);
   --fontSizeXLClamp: clamp(6rem, calc(1.5rem + 3vw), 8rem);
   --t_uf: all 250ms ease-in-out;
   --t_f: all 350ms ease-in-out;
@@ -1383,7 +1383,7 @@ I {
   transform: translateY(100%);
   text-align: center;
   inline-size: 90%;
-  font-size: var(--fontSizeMClamp);
+  font-size: var(--fontSizeSClamp);
 }
 .service_card:hover .bg_card {
   transform: scale(1.2);
@@ -2473,7 +2473,7 @@ I {
   display: flex;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 880px) {
   .flex_responsive {
     display: flex;
     flex-direction: row;
