--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -55,7 +55,7 @@
     --tc: var(--black);
     --tc_c: var(--whiteOff);
     --nvc: var(--white);
-    --nvc_t: rgba(242, 242, 242, 0.75);
+    --bgC_t: rgba(242, 242, 242, 0.75);
     --bgC: var(--whiteOff);
     --bgC_t: var(--whiteT);
     --bgC_ut: rgba(242, 242, 242, 0.25);
@@ -176,7 +176,6 @@
     --tc: rgb(26, 26, 26);
     --tc_c: rgb(230, 230, 230);
     --nvc: rgb(242, 242, 242);
-    --nvc_t: rgba(242, 242, 242, 0.75);
     --bgC: rgb(230, 230, 230);
     --bgC_t: rgba(242, 242, 242, 0.75);
     --bgC_ut: rgba(242, 242, 242, 0.5);
@@ -212,7 +211,6 @@
     --tc: rgb(230, 230, 230);
     --tc_c: rgb(26, 26, 26);
     --nvc: rgb(13, 13, 13);
-    --nvc_t: rgba(13, 13, 13, 0.75);
     --bgC: rgb(26, 26, 26);
     --bgC_t: rgba(13, 13, 13, 0.75);
     --bgC_ut: rgba(13, 13, 13, 0.5);
@@ -1034,6 +1032,7 @@ I {
     user-select: none;
     max-width: 250px;
     width: 100%;
+    box-shadow: 1px 1px 1rem var(--bgC_t), -1px -1px 1rem var(--bgC_t);
     .header_bubble {
         height: 6rem;
         width: 100%;
@@ -1672,7 +1671,7 @@ I {
         bottom: 0;
         left: 0;
         width: auto;
-        background: var(--nvc_t);
+        background: var(--bgC_t);
         transform: translateY(100%);
         z-index: 2;
     }
@@ -2167,7 +2166,7 @@ I {
     right: 0;
     width: 100%;
     height: var(--nvh);
-    background: var(--nvc_t);
+    background: var(--bgC_t);
     z-index: 5;
     transition: height 500ms ease;
     @include flexCenter();
@@ -2285,11 +2284,11 @@ I {
         height: auto;
         transition: var(--t_f);
         margin: var(--lg) 0;
-        background: var(--nvc_t);
+        background: var(--bgC_t);
         border-radius: var(--lg);
     }
     .menu_btn_social_menu {
-        background: var(--nvc_t);
+        background: var(--bgC_t);
     }
 
     .social_menu_btn {
