--- a/src/css/style.css
+++ b/src/css/style.css
@@ -148,6 +148,7 @@
 }
 
 BODY {
+  --border: solid var(--tc) 1px;
   --backgroundHero: linear-gradient(transparent, var(--bgC_off));
   --t_scale: scale 500ms cubic-bezier(0.51, -0.42, 0.06, 1.45);
   --fs_nvh: calc(100svh - var(--nvh));
@@ -860,7 +861,7 @@ I {
   flex-direction: column;
   position: absolute;
   background: var(--bgC_off);
-  border-radius: var(--md);
+  border-radius: var(--lg);
   z-index: 2;
   display: none;
   transition: var(--t_uf);
@@ -953,6 +954,7 @@ I {
 .info_bubble {
   padding: var(--lg);
   gap: var(--md);
+  border: var(--border);
 }
 .info_bubble .description {
   line-height: 1var --XL;
